--- a/my-app-front-end/src/css/App.css
+++ b/my-app-front-end/src/css/App.css
@@ -3,9 +3,9 @@
 }
 
 .header {
-  color: whitesmoke;
+  color: blanchedalmond;
   text-align: center;
-  font-family: fantasy;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 65px;
 }
 
@@ -51,14 +51,18 @@ body {
   }
 }
 
-input:required {
-  background-color: yellow;
-}
-
 #comment-input, #snack-name-input, #snack-url-input {
   width: 300px;
 }
 
-.form-headers {
-  font-family: fantasy;
+
+#menu-button {
+  font-size: 30px;
+  color: blanchedalmond;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
 }
+
+
+
+
