--- a/my-app-front-end/src/css/App.css
+++ b/my-app-front-end/src/css/App.css
@@ -18,14 +18,22 @@ body {
 }
 
 /* Float four columns side by side */
-.column {
+.column-snack {
+  float: left;
+  width: 75%;
+  padding: 0 10px;
+}
+
+.column-comment {
   float: left;
   width: 25%;
   padding: 0 10px;
 }
 
 /* Remove extra left and right margins, due to padding in columns */
-.row {margin: 0 -5px;}
+.row {
+  margin: 0 -5px;
+}
 
 /* Clear floats after the columns */
 .row:after {
@@ -51,10 +59,11 @@ body {
   }
 }
 
-#comment-input, #snack-name-input, #snack-url-input {
+#comment-input,
+#snack-name-input,
+#snack-url-input {
   width: 300px;
 }
-
 
 #menu-button {
   font-size: 30px;
@@ -63,6 +72,11 @@ body {
   font-weight: bold;
 }
 
+.container-snack {
+  display: inline-grid;
+  width: 500px;
+}
 
-
-
+.container-comment {
+  display: grid;
+}
